# decision-making-analysis

./: README.md  pyproject.toml
notebooks/chapter2/: section3.ipynb  section6.ipynb
notebooks/chapter3/: section2.ipynb
