[tool.poetry]
name = "decision-making-analysis"
version = "0.1.0"
description = ""
authors = ["kou-dev <indicum8hydrangea@gmail.com>"]
readme = "README.md"
packages = [{include = "decision_making_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
jupyterlab = "^4.0.9"
matplotlib = "^3.8.2"
japanize-matplotlib = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
